--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,28 @@
 spring.application.name=Api_ForoHub
+spring.datasource.url=jdbc:mysql://localhost:3306/db_api_foro
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+## para traducir los parametros de Pegeable a espaniol
+##spring.data.web.pageable.page-parameter=pagina
+##spring.data.web.pageable.size-parameter=tamano
+##spring.data.web.sort.sort-parameter=orden
+
+## para quitar la respuesta tracer, expone la configuracion y estructura del proyecto
+server.error.include-stacktrace=never
+
+## para jwt - paabra secreta mediante variables de entorno ## si no existe la variable de entorno carga la otra palabra despues de los :
+api.security.token.secret=${PALABRA_SECRETA_JWT:12345678}
+
+#####para solucinar error de de flyway y usar flywayRepair();
+##spring.flyway.locations=classpath:/resources/db/migration
+
+#####
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+
