agregando metodo actuaizar datos topicos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,12 @@ spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-
+## solo para desarrollo y debug
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+
+
 
 ## para traducir los parametros de Pegeable a espaniol
 ##spring.data.web.pageable.page-parameter=pagina
