finalizando challenge foro hub crud completo de topicos, login y crear usuario y springdocs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,6 @@ api.security.token.secret=${PALABRA_SECRETA_JWT:12345678}
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 
+##swangger documetancion
+springdoc.swagger-ui.path=/swagger-ui.html
+
